--- a/_posts/2016-11-30-magus.md
+++ b/_posts/2016-11-30-magus.md
@@ -14,15 +14,21 @@ I record and mix in [Reaper](http://www.reaper.fm/), with my Warwick Corvette V 
 
 After a few months, I don't completely hate a few of the tracks that came out. These were done with the explicit intent that they don't have to be perfect - I published them to keep myself honest. And hey, listening to them makes me want to go back and pick it up and continue to get better.
 
+## Confrontation with Magus
+
 Magus' theme is one of my favorites from the games, and there are _so_ many cool renditions of it that this one is really paltry. But it's probably the technical best of the bunch.
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/256341616&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 
-Ayla's theme, aka "Power Chords: The Song":
+## Ayle's Theme
+
+AKA "Power Chords: The Song":
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/253979060&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 
-Schala's Theme/Undersea Palace. These two themes have so many common elements (by design) that they sort of bleed together in my head. I just rolled with it and merged the two.
+## Schala's Theme/Undersea Palace
+
+These two themes have so many common elements (by design) that they sort of bleed together in my head. I just rolled with it and merged the two.
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/253965336&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 
