--- a/_posts/2016-11-30-magus.md
+++ b/_posts/2016-11-30-magus.md
@@ -18,7 +18,7 @@ After a few months, I don't completely hate a few of the tracks that came out. T
 
 Magus' theme is one of my favorites from the games, and there are _so_ many cool renditions of it that this one is really paltry. But it's probably the technical best of the bunch.
 
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/256341616&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/256341616&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 
 ## Ayle's Theme
 
